# rusty-autossh

./: .gitattributes  .gitignore  CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  README.md  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
completions/: _rusty-autossh  rusty-autossh.bash  rusty-autossh.fish  rusty-autossh.ps1
docs/: DESIGN.md  ci-runtime-baseline.md  feature-layout.md
src/: cli.rs  clock.rs  daemonizer.rs  error.rs  lib.rs  logging.rs  main.rs  mode.rs  monitor.rs  pidfile.rs  signals.rs  spawner.rs  strict.rs  supervisor.rs
tests/: SC_COVERAGE.md  compat_default.rs  compat_strict.rs  completions_drift.rs  daemonize.rs  daemonize_windows.rs  library_api.rs  missing_docs.rs  monitor_port.rs  signals.rs  signals_windows.rs  supervisor.rs
tests/common/: mod.rs
tests/snapshots/upstream_v1_4g/: README.md
